--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   -moz-osx-font-smoothing: auto;
   background-color: #FFFFFF;
   width: 100%;
-  padding-top: 150px;
+  padding-top: 50px;
 }
 
 main {
@@ -326,19 +326,20 @@ html {
 }
 
 header {
-  position: fixed;
-  top: 50px;
   width: 100%;
-  z-index: 10;
 }
 
 header .flex {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  top: 50px;
 }
 
 header .flex img {
+  position: fixed;
+  top: 50px;
+  z-index: 10;
   width: 30px;
   height: 35px;
 }
